--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
   ],
   "bugs": "http://bugs.dojotoolkit.org/",
   "keywords": ["JavaScript", "Dojo", "Widget"],
-  "homepage": "http://dojotoolkit.org/"
+  "homepage": "http://dojotoolkit.org/",
+  "icon": "http://packages.dojofoundation.org/images/dijit.png"
 }
